@@ -1,3 +1,8 @@
+2012-06-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/gen.c (loadRegIndex, storeRegIndexed): added missing
+	  rematOfs
+
 2012-06-03 Borut Razem <borut.razem AT gmail.com>
 
 	* src/pic14/main.c, src/pic16/main.c: re-enabled deprecated
